--- a/CUSTOM-CSS/custom.css
+++ b/CUSTOM-CSS/custom.css
@@ -37,3 +37,9 @@ th {
     height:  115px;
     object-fit: cover;
 }
+
+.pagination-wrap .pagination .page-link {
+    width: auto;
+    min-width: 40px;
+    padding: 0 5px;
+}
